--- a/indeex.html
+++ b/indeex.html
@@ -24,7 +24,7 @@
             <a href="training.html">
                 <div class="per-dergim">Trainings</div>
             </a>
-            <a href=""><img src="/img/gjimnazi.png" alt=""></a>
+            <a href="index.html"><img src="./photo/github profile.png" alt=""></a>
         </div>
     </nav>
     <section>
