--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="my goals.css">
+    <link rel="stylesheet" href="my-goals.css">
     <script src="my-goals.js" defer></script>
     <script src="DOC.JS" defer></script>
 </head>
@@ -14,26 +14,26 @@
 <body>
     <div class="left">
         <div class="fotoja">
-            <img src="../photo/github profile.png" alt="" id="profili">
+            <img src="./photo/github profile.png" alt="" id="profili">
             <p id="nickname">Jonafazz</p>
         </div>
         <div class="teksi">
             <div class="getti">
-                <a href="https://www.youtube.com/" id="trainingu" class="redo">Trainings</a>
+                <a href="training.html" id="trainingu" class="redo">Trainings</a>
             </div>
             <div class="getti">
-                <a href="https://www.ebay.com/?mkcid=1&mkrid=711-53200-19255-0&siteid=0&campid=5338777411&toolid=20008&mkevt=1&customid=enxltopsitescurateana"
+                <a href="indeex.html"
                     id="tutoriali" class="redo">Tutorials</a>
             </div>
             <div class="getti">
-                <a href="https://www.facebook.com/" id="sign-out" class="redo">Sign Out</a>
+                <a href="loginnn.html" id="sign-out" class="redo">Sign Out</a>
             </div>
         </div>
     </div>
     <div class="center">
         <div class="kronm">
             <input type="text" id="namefold" placeholder="Enter folder name...">
-            <img src="../photo/white icon.png" alt="" class="hoa" id="ink">
+            <img src="./photo/white icon.png" alt="" class="hoa" id="ink">
         </div>
         <!-- <img src="Vector2.png" alt="" class="hoa" id="lov"> -->
 
