--- a/loginnn.html
+++ b/loginnn.html
@@ -34,7 +34,10 @@
           </div>
 
           <div class="field button-field">
-            <button>Login</button>
+            <button>
+              <a href="indeex.html" style="color: white;">Login</a>
+
+            </button>
           </div>
         </form>
 
@@ -70,13 +73,13 @@
           </div>
 
           <div class="field button-field">
-            <button>Signup</button>
+            <a href="index.html"><button>Signup</button></a>
           </div>
         </form>
 
         <div class="form-link">
           <span>Already have an Account?
-            <a href="./women hackathon/index.html" class="link login-link">Login </a>
+            <a href="index.html" class="link login-link">Login </a>
           </span>
         </div>
       </div>
